test/TestPhases/importchecking/valid/implicitImportAccess.blc
import c "imports/constant"

module 

const incr42 = .FortyTwo + 1
