test/TestPhases/importchecking/invalid/implicitImportAccess.blc
import dummy "imports/constant"

module 

enum Test
    FortyTwo
end

const incr42 = FortyTwo + 1
